--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,8 +38,16 @@ main#home {
 		margin-top: 20vh;
 	}
 
+	.skills {
+		padding: 0 2rem;
+		font-size: 1.2rem;
+		span {
+			color: $secondary-color;
+		}
+	}
+
 	.icons {
-		margin-top: 1rem;
+		margin-top: 2rem;
 
 		a {
 			padding: 0.4rem;
@@ -166,6 +174,83 @@ main#contact {
 
 				span {
 					color: set-text-color($secondary-color);
+
+				}
+			}
+		}
+	}
+}
+
+//My works page 
+main#my-works {
+
+	.projects {
+		margin: 3rem 0;
+		flex-direction: column;
+		display: grid;
+		grid-gap: 1rem;
+		grid-template-columns: repeat(3, 1fr);
+
+		.card {
+			width: 400px;
+			height: 350px;
+			margin: 0 auto;
+			background-image: url("../img/url-shortener-bg.png");
+			background-size: cover;
+			overflow: hidden;
+			position: relative;
+			border-radius: 3px;
+
+			.inner-card {
+				width: 100%;
+				height: 100%;
+				box-shadow: 0px 6px 14px black;
+				background: lighten($primary-color, 5);
+				position: absolute;
+				padding: 10px;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+
+				transition: transform .5s ease-out;
+				transform: translateY(80%);
+				&:hover {
+					transform: translateY(0%);
+				}
+
+				.heading {
+					h3 {
+						margin: 14px 0;
+						color: $secondary-color;
+					}
+				}
+
+				.actions {
+					display: flex;
+
+					.link {
+						margin-right: 10px;
+
+						i {
+							font-size: 1.2rem;
+							padding: 0 4px;
+						}
+
+						a {
+							text-decoration: none;
+							color: set-text-color($primary-color);
+							font-size: 1.2rem;
+						}
+
+						&:hover {
+
+							i,
+							a {
+								color: $secondary-color;
+								@include easeOut;
+							}
+						}
+					}
 
 				}
 			}
